assets/css/style.css
body{
    background-image: url("../images/background-pattern.png");
    background-attachment: fixed;
}
/* .shrink{
    height:10%;
    animation:none;
    animation-name:fade-in;
    animation-duration:1s;
    animation-timing-function: ease-in-out;
} */
.row:not(:last-of-type){
    animation:none;
    animation-name:fade-in;
    animation-duration:1s;
    animation-timing-function: ease-in-out;
}
.myPortfolio{
    display:none;
}
.aboutMe{
    display:none;
}
.contactMe{
    display:none;
}
.pageName{
    background-color: white;
    color: #ff186d;
    font-size: 30px;
    font-family: 'Roboto',"sans-serif";

}
.bg-yellow{
    background:sandybrown!important
}
.bg-blue{
    background:rgb(11, 11, 65)!important
}
.text-dark{
    color:rgb(11, 11, 65)!important;
}

.profileImg{
    transform: scaleX(-1);
}
.thumb {
    border-radius:100%;
    overflow:hidden;
    display: inline-block;
    width: 200px;
    height: 200px;
    margin: 5px;
    border: 3px solid white;
    background-position: center center;
    background-size: cover;
}
.moreInfoButton{
    border: #4aaaa5;
    color: #4aaaa5
}
.jumbotron{
    background: #ff186d
}
.footer{
    background-color:rgb(11, 11, 65);
    border-top: 5px solid #ff186d;
}
.card{
    background:#ff186d;
    color: white;
}
collapse{
    background:darkblue;
}
button[type = "submit"]{
    background: #ff186d;
    color: white;
    border: 0px;
    width:100%
}
button[type = "submit"]:hover{
    background: #db145d;
    color: white;
}
.pillArrow{
    position:absolute;
    right:30px;
}
.bg-light{
    background:white!important;
}
.text-red{
    color: #ff186d!important;
}
.mb-4{
    font-family: 'Roboto',"sans-serif";
}
body{
    font-family: 'Arial', 'Helvetica Neue', "Helvetica", "sans-serif";
}
.nav-link.bg-blue:hover{
    background:#ff186d!important;
    color:white!important;
}
.nav-link.bg-blue.active{
    background:#ff186d!important;
    color:white!important;
}
.project-title:hover{
    color:white!important;
}

a{
    color: white;
}
nav{
    /* height:100%; */
    background:transparent;
    /* animation:none;
    animation-name:fade-in;
    animation-duration:1s;
    animation-timing-function: ease-in-out; */
}
.navbtn:active{
    outline:none;
}
.startupsRow,.websitesRow,.gamesRow{
    overflow-x: scroll;
    overflow-y: hidden;
    max-height: 350px;
    display: inline-flex;
    box-shadow: inset 0px 0px 8px 0px rgba(0,0,0,0.2)
}
@media only screen and (min-width: 992px) {
    .nav-item:last-child{
        border-right: 0px;
    }
}
@media only screen and (max-width: 640px) {
    .pageName{
    width:100%;
    }
}

@keyframes fade-in{
    from {opacity: 0;}
    to {opacity: 1;}
}

